fix: add gap to list's card

--- a/product-store/src/app/features/list/list.component.scss
+++ b/product-store/src/app/features/list/list.component.scss
@@ -3,3 +3,7 @@
     justify-content: flex-end;
     padding: 16px 0;
 }
+
+.item-container {
+    margin-bottom: 16px;
+}
